--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <title>InstagramGrowth</title>
 <body>
 
-Download InstagramGrowth.apk Version 1.1.0 (Latest)
-<a href = InstagramGrowth.apk download> Download here </a><br>
+Download Sam.apk Version 1.1.0 (Latest)
+<a href = sam.apk download> Download here </a><br>
 
 </body>
 </html>
